# COUNCIL-X

./: CLAUDE.md  PAA_KienTruc_HighLevel.md  PAA_Mockup_SHB_8.html  README.md  SHB_ThamDinhBDS_DesignDoc_2.md
ai/: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  PAA_Mockup_SHB_8.html  PAA_Schema_PostgreSQL.sql  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  shb_dump.sql
ai/.github/: PULL_REQUEST_TEMPLATE.md
ai/.github/ISSUE_TEMPLATE/: bug_report.yml
ai/.github/workflows/: pre-commit.yml
ai/alembic/: env.py
ai/alembic/versions/: 001_initial_schema.py  002_paa_schema.py
ai/docs/: ARCHITECTURE.md  PAA_SQL_TOOLS_NOTES.md  PRD-SHB-AI.md  dashboard-methodology.md  demo-script.md  risk-methodology.md  valuation-methodology.md
ai/docs/contracts/: property-dashboard-contract.md  property-intake-contract.md  property-lookup-contract.md  property-risk-contract.md  property-valuation-contract.md  sse-streaming.md
ai/postman/: PAA_property_dashboard.postman_collection.json  PAA_property_intake.postman_collection.json  PAA_property_lookup.postman_collection.json  PAA_property_risk.postman_collection.json  PAA_property_valuation.postman_collection.json  README.md
ai/scripts/: dump_seed.sh  e2e_f1_f2_f3.py  e2e_f1_to_f2.py  e2e_f1_to_f5.py  generate_secret_key.py  load_seed.sh  make_demo_docs.py  paa_seed.sql  prepare_demo_case.py  seed_preamble.sql  test_llm_call.py  transform_seed.py
ai/seed/: paa_seed_data.sql
ai/src/shb/: main.py
ai/tests/: __init__.py  conftest.py  test_llm_vision.py  test_parsers.py  test_registry.py  test_sse.py
ai/tests/capabilities/: test_dashboard_narrator.py  test_dashboard_synthesis.py  test_paa_tools.py  test_risk_engine.py  test_valuation_engine.py
ai/tests/plugins/: _pi_fixtures.py  test_intake_locate.py  test_property_dashboard.py  test_property_intake.py  test_property_intake_integration.py  test_property_lookup.py  (+2 more)
(+288 files in other folders)
