[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "pre-commit>=3.6.0",
    "types-setuptools>=69.0.0",
    "aiosqlite>=0.19.0",
]

[project]
name = "shb-ai"
version = "0.1.0"
description = "SHB AI: A unified platform for multiple AI tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "SHB AI Team"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openrouter>=0.1.0",
    "langgraph>=0.0.1",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "kombu>=5.3.0",
    "eventlet>=0.33.3",
    "pdfplumber>=0.11.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pdf2image>=1.17.0",
    "pypdf>=4.0.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["shb"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "langchain", "langgraph"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = false

[tool.setuptools]
packages = ["shb"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
